--- a/intro-to-flexbox/index.html
+++ b/intro-to-flexbox/index.html
@@ -32,7 +32,7 @@
               incididunt ut labore et dolore magna aliqua.
             </p>
           </div>
-          <div class="item">
+          <div class="item item-double">
             <h3>Item 2</h3>
             <p>
               Duis aute irure dolor in reprehenderit in voluptate velit esse
